--- a/styles.css
+++ b/styles.css
@@ -19,25 +19,26 @@
 .navbar {
     text-align: right;
     max-width: 100%;
+    display: flex;
 }
 .a {
     color: white;
     text-decoration: none;
     font-size: 21px;
     font-family: 'Inter', sans-serif;
-    display: block;
     transition: color .35s ease-in;
+
 }
+
 .a:hover {
     color: #38cb38;
 }
 .x {
     margin-left: 2px;
-    margin-right: 610px;
+    /* margin-right: 620px; */
 }
 ul {
     display: flex;
-    justify-content: left;
 }
 li {
     list-style: none;
@@ -266,6 +267,7 @@ li {
     margin-top: 80px;
     display: flex;
     text-align: center;
+    bottom: 0;
 }
 .table {
    flex-direction: column;
@@ -328,17 +330,19 @@ li {
     flex-direction: row;
 }
 /* Media Queries */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 700px) and (min-device-width: 400px) {
     ul {
+        display: flex;
         flex-direction: column;
-        justify-content: center;
         text-align: center;
+        align-items: center;
         font-size: 20px;
 
-    } 
+    }
     .a {
         font-size: 30px;
         font-style: normal;
+        padding: 11px 11px;
     }
     .x {
         margin-right: auto;
@@ -360,7 +364,38 @@ li {
     .c {
         width: 100%;
     }
+    .footer {
+        display: flex;
+        flex-direction: column;
+    }
+    .table {
+        width: 100%;
+    }
 }
-@media (min-resolution: 192dpi) {
-   
+
+@media screen and (min-device-width: 370px) and (max-width: 400px) {
+    .a {
+        font-size: 30px;
+        font-style: normal;
+        padding: 12px 12px;
+    }
+    ul {
+        width: 100%;
+        max-width: 100%;
+    }
+        
+}
+@media screen and (min-device-width: 375px) and (max-width: 415px) {
+    .a {
+        font-size: 28px;
+        padding: 10px 10px;
+        text-align: center;
+    } 
+    li {
+        padding: 10px 10px;
+    }
+    ul {
+        width: 100%;
+        max-width: 100%;
+    }
 }
