--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,10 @@ li {
   background: #3B5998;
   color: white;
 }
+.fa-github {
+    color: black;
+    background: whitesmoke;
+}
 .tableBottom {
     display: flex;
     flex-direction: row;
