Changed many things to Bulma.io
now using bulma.io for most of the website.

changes are responsive navbar, new buttons and others

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@
     background-size: cover;
     position: relative;
 }
+.bc {
+   margin-top: 10px;
+   padding: 10px 10px;
+}
 .op {
     display: block;
     background-color: rgb(165, 165, 165);
@@ -21,7 +25,7 @@
     max-width: 100%;
     display: flex;
 }
-.a {
+/*.a {
     color: white;
     text-decoration: none;
     font-size: 21px;
@@ -32,10 +36,6 @@
 
 .a:hover {
     color: #38cb38;
-}
-.x {
-    margin-left: 2px;
-    /* margin-right: 620px; */
 }
 ul {
     display: flex;
@@ -49,7 +49,7 @@ li {
     margin-top: 9px;
     padding: 9px 9px;
 
-}
+}*/
 .h0 {
     font-size: 34px;
     font-family: 'Montserrat', sans-serif;
@@ -270,6 +270,7 @@ li {
     display: flex;
     text-align: center;
     bottom: 0;
+    background: white;
 }
 .table {
    flex-direction: column;
@@ -294,6 +295,7 @@ li {
     text-align: center;
     font-size: 14px;
     height: 34px;
+    color: black;
 }
 .ec {
     color: #3d4446;
@@ -313,7 +315,8 @@ li {
 }
 
 .fa:hover {
-    opacity: 0.7;
+    opacity: 0.9;
+    color: white;
 }
 .fa-twitter {
   background: #55ACEE;
@@ -336,7 +339,7 @@ li {
     flex-direction: row;
 }
 /* Media Queries */
-@media screen and (max-width: 700px) and (min-device-width: 400px) {
+@media screen and (max-width: 700px) and (min-width: 400px) {
     ul {
         display: flex;
         flex-direction: column;
