--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@
     text-align: right;
     max-width: 100%;
     display: flex;
+    max-height: 100%;
 }
 .h0 {
     font-size: 34px;
@@ -228,11 +229,6 @@
     margin: 6px 8px;
 
 }
-
-.product {
-     padding: 9px 9px;
-     margin: 8px 10px;
-}
 #submit {
     background: #0066A2;
     color: white;
@@ -319,6 +315,21 @@
 .tableBottom {
     display: flex;
     flex-direction: row;
+}
+/* Checkout Form */
+#checkout {
+    text-align: center;
+    width: 33%;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+input {
+    text-align: center;
+    padding: 9.5px 9.5px;
+    width: 33%;
+    margin: 6px 8px;
 }
 /* Media Queries */
 @media screen and (max-width: 700px) and (min-width: 400px) {
