--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,11 @@
     font-size: 20px;
 }
 .navbar-item {
-    margin-right: 8px;
-    margin-left: 8px;
+    margin-right: 7px;
+    margin-left: 7px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .bc {
-   margin-top: 10px;
    padding: 10px 10px;
    font-size: 20px;
 }
@@ -32,13 +32,14 @@
     max-width: 100%;
     display: flex;
     max-height: 100%;
+    padding: 6px 6px;
 }
 .h0 {
     font-size: 34px;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     margin: 8px 15px;
-    padding: 20px 20px;
+    padding: 30px 30px;
 }
 #u {
     margin-top: 20px;
@@ -51,6 +52,10 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 23.5px;
     color: rgb(255, 255, 255);
+}
+.mySlides {
+    display: none;
+    max-width: 100%;
 }
 /* Card Styles */
 .cardContainer {
@@ -116,7 +121,7 @@
     transition: background .5s ease-in;
 }
 .button:hover {
-    background-color: rgb(255, 0, 0);
+    opacity: 0.8;
 }
 /* Why Us  */
 .h01 {
@@ -196,7 +201,7 @@
   background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding: 18px;
+  padding: 18px 18px;
   width: 100%;
   text-align: left;
   border: none;
@@ -238,17 +243,19 @@
     width: 100px;
     font: bold 15px arial, sans-serif;
     text-shadow:none;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 .c:focus {
     border: 2px solid rgb(12, 119, 219)
 }
 /* Footer */
 .footer {
-    margin-top: 80px;
+    color: black;
+}
+footer {
     display: flex;
-    text-align: center;
-    bottom: 0;
-    background: white;
+    flex-direction: column;
 }
 .table {
    flex-direction: column;
@@ -258,8 +265,7 @@
     width: 33.3%;
 }
 .tt {
-    margin-top: 9px;
-    margin-bottom: 9px;
+    margin: 10px 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     font-size: 17px;
@@ -267,13 +273,14 @@
     height: 34px;
 }
 .li1 {
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin-bottom: 8px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     font-size: 14px;
     height: 34px;
     color: black;
+    width: 90%;
+    justify-items: center;
 }
 .ec {
     color: #3d4446;
@@ -284,12 +291,13 @@
     color: #10e0b3;
 }
 .fa {
-  padding: 10px;
+  padding: 12px;
   font-size: 30px;
   text-align: center;
   text-decoration: none;
   width: 40px;
   transition: opacity .39s;
+  text-align: center;
 }
 
 .fa:hover {
@@ -310,26 +318,15 @@
 }
 .fa-github {
     color: black;
-    background: whitesmoke;
+    background: white;
+}
+.fa-github:hover {
+    opacity: 0.7;
+    color: black;
 }
 .tableBottom {
     display: flex;
     flex-direction: row;
-}
-/* Checkout Form */
-#checkout {
-    text-align: center;
-    width: 33%;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-input {
-    text-align: center;
-    padding: 9.5px 9.5px;
-    width: 33%;
-    margin: 6px 8px;
 }
 /* Media Queries */
 @media screen and (max-width: 700px) and (min-width: 400px) {
