--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 }
 
 #bgrnd {
-  padding: 10px 10px;
   max-width: 100%;
   position: relative;
   background-image: url("https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
@@ -11,17 +10,16 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   font-size: 20px;
 }
 .navbar-item {
-  margin-right: 7px;
-  margin-left: 7px;
+  margin-right: 6px;
+  margin-left: 6px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .bc {
-  padding: 10px 10px;
   font-size: 20px;
+  width: 100%;
 }
 .op {
   display: block;
@@ -30,8 +28,7 @@
   z-index: 0;
 }
 .navbar {
-  text-align: right;
-  max-width: 100%;
+  max-width: 100vw;
   display: flex;
   max-height: 100%;
   padding: 6px 6px;
@@ -53,7 +50,7 @@
 .h00 {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  font-size: 23.5px;
+  font-size: 24px;
   color: rgb(255, 255, 255);
 }
 .mySlides {
@@ -219,7 +216,6 @@
   text-align: left;
   border: none;
   outline: none;
-  transition: 0.4s;
   font-size: 19px;
   transition: background 0.4s ease-out;
 }
@@ -244,7 +240,7 @@
   font-size: 18px;
 }
 .c {
-  padding: 9.5px 9.5px;
+  padding: 10px 10px;
   width: 33%;
   margin: 6px 8px;
 }
