Major Update (SignUp, Text Edits and More!)
- Added the signup page which currently asks for an email and name: next update should have the signups posted to a secure admin dashboard which will only be accesible through netlify identity and only invited users.

- register page added (which is currently not available to public and will not be because it will be for logging into the admin board to check emails and other data for future)

- text edits (mostly for the faq page)

- added new section about how to pay spino on faq

- sign up button on navbar

-

--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,15 @@
   }
 }
 
+.center {
+  text-align: center;
+}
+.pageclip-form__submit {
+  margin-bottom: 5px;
+}
+.pageclip-form__submit:hover {
+  opacity: 0.8;
+}
 /* FAQ */
 .faq {
   background-color: #eee;
