--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 #bgrnd {
-  max-width: 100%;
+  /*max-width: 100%;*/
   position: relative;
   background-image: url("https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
   min-height: 700px;
@@ -77,7 +77,7 @@
 .header {
   display: block;
   text-align: center;
-  font-size: 30px;
+  font-size: 1.875rem;
   font-weight: bold;
   background-color: black;
   height: 65px;
@@ -90,7 +90,7 @@
   text-align: center;
   background-color: #eee;
   height: 45px;
-  font-size: 25px;
+  font-size: 1.563rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 500;
@@ -105,7 +105,7 @@
   margin-bottom: 9px;
   font-family: "Oxygen", sans-serif;
   text-align: center;
-  font-size: 18px;
+  font-size: 1.125rem;
   height: 34px;
 }
 
@@ -125,7 +125,7 @@
 }
 /* Why Us  */
 .h01 {
-  font-size: 30px;
+  font-size: 1.875rem;
   font-family: "Montserrat", sans-serif;
   text-align: center;
   margin: 8px 15px;
@@ -148,7 +148,7 @@
   padding-bottom: 10px;
   color: white;
   font-family: "Cairo", sans-serif;
-  font-size: 18px;
+  font-size: 1.125rem;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -176,7 +176,7 @@
   text-align: center;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  font-size: 22px;
+  font-size: 1.375rem;
 }
 .reasons {
   max-width: 100%;
@@ -247,6 +247,9 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 18px;
+}
+input.invalid {
+  border-color: red;
 }
 .c {
   padding: 10px 10px;
@@ -372,5 +375,8 @@ footer {
   ul {
     width: 100%;
     max-width: 100%;
+  }
+  .hero {
+    height: auto;
   }
 }
